tests/baselines/reference/moduleKeywordRepeatError.errors.txt
==== tests/cases/compiler/moduleKeywordRepeatError.ts (2 errors) ====
    // "module.module { }" should raise a syntax error
    
    module.module { }
                  ~
!!! moduleKeywordRepeatError.ts(3,15): error TS1005: ';' expected.
    ~~~~~~
!!! moduleKeywordRepeatError.ts(3,1): error TS2095: Could not find symbol 'module'.